--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
 # book.epub: 電子書籍用EPUB（カラー画像）, book.pdf: 電子書籍用PDF（カラー画像、閲覧用リンクあり、仕上がりサイズ）
 
-texdocumentclass: ["thinkit-books", "pdf:kanjimap=ipa, cameraready=pdf, backmatter:break-before=page,"]
+texdocumentclass: ["thinkit-books", "pdf:kanjimap=ipaex, cameraready=pdf, backmatter:break-before=page,"]
 #   hanmen, % draft,
 #   % hanmengrid,
 #   % tombo, % mentuke,
