--- a/config-sp.yml
+++ b/config-sp.yml
@@ -1,18 +1,20 @@
 # book-sp.pdf: 京葉SPおよびAmazonPOD用PDF（グレースケール画像、印刷用リンクなし、仕上がりサイズ）
 
-texdocumentclass: ["thinkit-books", "pdf:kanjimap=hiragino, cameraready=print, backmatter:break-before=page,"]
-#   hanmen, % draft,
-#   % hanmengrid,
-#   % tombo, % mentuke,
-#   % showremark,
-#   cameraready=pdf,%default: print; available: preview,print,pdf
-#   % paper=b5var+3.17mm,%default: b5var; available: b5var{,+3mm,+3.17mm,+4mm}
-#   %
-#   % toc:break-before=page,%default: right
-#   % backmatter:break-before=page,%default: right
-texcommand: uplatex
 pdfmaker:
-  hook_beforetexcompile: ./hook_tex.rb
+  texdocumentclass: ["thinkit-books", "pdf:kanjimap=hiragino, cameraready=print, backmatter:break-before=page,"]
+  #   hanmen, % draft,
+  #   % hanmengrid,
+  #   % tombo, % mentuke,
+  #   % showremark,
+  #   cameraready=pdf,%default: print; available: preview,print,pdf
+  #   % paper=b5var+3.17mm,%default: b5var; available: b5var{,+3mm,+3.17mm,+4mm}
+  #   %
+  #   % toc:break-before=page,%default: right
+  #   % backmatter:break-before=page,%default: right
+  texcommand: uplatex
+  hook_beforetexcompile: ../hook_beforetex.rb
+  # hook_aftertexcompile: null
+  ## end of pdfmaker
 
 # ブック名(ファイル名になるもの。ASCII範囲の文字を使用)
 bookname: book-sp
