--- a/config.yml
+++ b/config.yml
@@ -12,7 +12,7 @@ pdfmaker:
   #   % toc:break-before=page,%default: right
   #   % backmatter:break-before=page,%default: right
   texcommand: uplatex
-  hook_beforetexcompile: ../hook_tex.rb
+  hook_beforetexcompile: ../hook_beforetex.rb
   # hook_aftertexcompile: null
   ## end of pdfmaker
 
