--- a/config-print.yml
+++ b/config-print.yml
@@ -1,7 +1,7 @@
 # book-print.pdf: オフセット用PDF（グレースケール画像、印刷用リンクなし、トンボあり、デフォルトオフ）
 
 pdfmaker:
-  texdocumentclass: ["thinkit-books", "tombo, pdf:kanjimap=morisawa, cameraready=print, backmatter:break-before=page,"]
+  texdocumentclass: ["thinkit-books", "tombo, pdf:kanjimap=hiragino, cameraready=print, backmatter:break-before=page,"]
   #   hanmen, % draft,
   #   % hanmengrid,
   #   % tombo, % mentuke,
