デフォルトフォントをhiraginoに
https://github.com/thinkitcojp/tibooks-maker/commit/97b45ad30fbc3a9805e2
c9bbc610237974db05e9 の変更を受けて

--- a/config.yml
+++ b/config.yml
@@ -77,7 +77,7 @@ texdocumentclass: ["jsbook", "uplatex,oneside"]
 
 pdfmaker:
   toc: true
-  texdocumentclass: ["thinkit-books", "pdf:kanjimap=ipaex, cameraready=pdf, backmatter:break-before=page,"]
+  texdocumentclass: ["thinkit-books", "pdf:kanjimap=hiragino, cameraready=pdf, backmatter:break-before=page,"]
   #   hanmen, % draft,
   #   % hanmengrid,
   #   % tombo, % mentuke,
