--- a/config-print.yml
+++ b/config-print.yml
@@ -5,7 +5,7 @@ inherit: ["config.yml"]
 bookname: book-print
 
 pdfmaker:
-  texdocumentclass: ["thinkit-books", "tombo, pdf:kanjimap=morisawa, cameraready=print, backmatter:break-before=page,"]
+  texdocumentclass: ["thinkit-books", "tombo, pdf:kanjimap=hiragino, cameraready=print, backmatter:break-before=page,"]
   #   hanmen, % draft,
   #   % hanmengrid,
   #   % tombo, % mentuke,
